Fixing contact page, added modal popUp on phone ico click,  resize icons on mobile, few things added in head

--- a/style.css
+++ b/style.css
@@ -47,10 +47,10 @@
   min-height: 100%;
   min-width: 100%;
   background-image: url("/img/linedpaper-dark.png");
-  background-repeat: repeat;
-  position: relative;
+  background-repeat: round;
+  position: absolute;
   top: 0px;
-  bottom: 100px;
+  /* bottom: 100px; */
   left: 0px;
   z-index: 1;
   
@@ -99,11 +99,11 @@ body {
 	/* Without this, the body has excess horizontal scroll when the menu is open */
   overflow-x: hidden;
   
+  display: flex;
   margin: 0;
   /* overflow: hidden; */
   flex-wrap: wrap;
   height: 100vh;
-  display: flex;
   /* justify-content: center; */
   align-content: center;
 }
@@ -115,11 +115,12 @@ body {
   align-items: center;
   justify-content: center;
   font-family: 'Dawning of a New Day', cursive, Serif;
-  font-size: 2em;
-  /* height: 100%; */
+  font-size: 4em;
+  line-height: 1em;
+  height: 100vh;
   text-align: center;
   color:rgb(97, 97, 97);
-  margin-top: 78rem; /*I can't figure it out why I have to add so much margin on the top?*/
+  /* margin-top: 0px; */
   padding: 50px;
   }
   
@@ -128,12 +129,11 @@ body {
     font-size: 1em;
   }
   }
-  
-  /* h3, p {
-    max-width: 1200px;
-    margin: 0 auto 1em;
-  } */
-
+  @media screen and (max-width: 830px) {
+  .header {
+    font-size: 2em;
+  }
+  }
 
 /* Micro reset */
 
@@ -154,6 +154,19 @@ html, body { height: 100%; width: 100%; font-family: Helvetica, Arial, sans-seri
   /* style */
   font-size: 200px;
 }
+
+@media screen and (max-width: 600px) {
+  .social {
+    display: flex;
+    flex-direction: column;
+    font-size: 80px;
+  }
+  }
+@media screen and (max-width: 830px) {
+  .social {
+    font-size: 80px;
+  }
+  }
 
 a {
   color: inherit;
@@ -254,6 +267,74 @@ a {
   /* Preserve aspet ratio */
   width: 100%;
   height: 100%;
-  max-height: 100%;
-  overflow: hidden;
+  object-fit: fill;
+}
+
+/* Contact - Show modal */
+
+.modal {
+  /* display: block; */
+  display: none; /*display should be set to none, otherwise modal would popUp on page load*/
+  background-color: #202b1b;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 600px;
+  height: 600px;
+  margin-left: -292px;
+  margin-top: -300px;
+  padding: 50px;
+  border-radius: 5px;
+  z-index: 10;
+  box-shadow: 0 0 0 99999px rgba(0, 0, 0, 0.61);
+}
+
+#introvertDoodles {
+  width: 100%;
+  height: auto;
+  padding:0px;
+}
+
+#modalClosePlus {
+  position: absolute;
+  top: 0;
+  right: 14px;
+  color: aliceblue;
+  font-size: 50px;
+  transform: rotate(45deg);
+  cursor: pointer;
+}
+
+/* .close-modal {
+  color:  #000;
+  text-decoration: none;
+  float: right;
+  position: absolute;
+  top: 10px;
+  right: 10px 
+}
+*/
+@media (max-width : 37.500rem) {
+
+  .modal {
+  	top: 0;
+  	left: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 1.250rem
+  }
+  
+  /* .close-modal{
+    display: block;
+   position: relative;
+   padding: 5px 10px 20px 0
+  } */
+  
+  .modal-content{
+    clear: both;
+    padding-top: 4rem;
+    /* padding-right: 1.25rem */
+  }
+  
 }
